python/gll/_libgll.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/cwbudde/gll-tools/cmd/gllpy */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 6 "main.go"

#include <stdlib.h>
#include <stdint.h>
#include <string.h>

// GLL_Result holds the result of a GLL operation.
// data contains the result (JSON string or binary data).
// error contains an error message if the operation failed.
// length contains the length of data for binary results.
typedef struct {
    char* data;
    char* error;
    int64_t length;
} GLL_Result;

// GLL_ByteResult holds binary data result.
typedef struct {
    void* data;
    int64_t length;
    char* error;
} GLL_ByteResult;

// GLL_Float64Array holds a contiguous float64 buffer plus shape metadata.
typedef struct {
    void* data;
    int64_t rows;
    int64_t cols;
    int64_t length;
    char* error;
} GLL_Float64Array;

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


// GLL_Version returns the version string of the library.
//
extern char* GLL_Version(void);

// GLL_ParseFile parses a GLL file and returns JSON metadata.
//
extern GLL_Result GLL_ParseFile(char* path);

// GLL_ParseBytes parses GLL data from memory and returns JSON metadata.
//
extern GLL_Result GLL_ParseBytes(char* data, int64_t length);

// GLL_ExtractResource extracts a resource by index from a GLL file.
//
extern GLL_ByteResult GLL_ExtractResource(char* path, int32_t resourceIndex);

// GLL_ExtractDataFile extracts a DataFile by index from a GLL file.
//
extern GLL_ByteResult GLL_ExtractDataFile(char* path, int32_t dataFileIndex);

// GLL_ExtractIncludeFile extracts an IncludeFile by index from a GLL file.
//
extern GLL_ByteResult GLL_ExtractIncludeFile(char* path, int32_t includeFileIndex);

// GLL_ComputeArrayResponse computes the combined array response.
// Input: JSON string with array configuration
// Output: JSON string with transfer function result
//
extern GLL_Result GLL_ComputeArrayResponse(char* configJSON);

// GLL_GetBalloonAtFrequency gets balloon data at a specific frequency.
// Returns JSON with SPL values at each angle.
//
extern GLL_Result GLL_GetBalloonAtFrequency(char* path, int32_t sourceIndex, double frequencyHz);

// GLL_GetBalloonGridRaw gets a contiguous float64 grid for NumPy zero-copy views.
// The output shape is [meridian][parallel] in row-major order.
//
extern GLL_Float64Array GLL_GetBalloonGridRaw(char* path, int32_t sourceIndex, double frequencyHz);

// GLL_FreeResult frees a GLL_Result's allocated memory.
//
extern void GLL_FreeResult(GLL_Result result);

// GLL_FreeByteResult frees a GLL_ByteResult's allocated memory.
//
extern void GLL_FreeByteResult(GLL_ByteResult result);

// GLL_FreeFloat64Array frees a GLL_Float64Array's allocated memory.
//
extern void GLL_FreeFloat64Array(GLL_Float64Array result);

// GLL_FreeString frees a C string allocated by this library.
//
extern void GLL_FreeString(char* s);

#ifdef __cplusplus
}
#endif